1.1.17/1.0.18 - August 2, 2012
==============================
* Issue 132: If namespace is set in builder, getNamespace() does not return it

1.1.16/1.0.17 - August 2, 2012
==============================
* Merge 114 from amuraru: Make sure internal executor services are not started until startup.

* Merge 116 from samuelgmartinez: Fix for Issue 115: Wrong behaviour in LeaderLatch when a candidate
loses connection

* Issue 118: Ignore nonode exceptions when deleting lock path

* Added a non-reentrant mutex: InterProcessSemaphoreMutex. This mutex doesn't have the threading
restrictions that InterProcessMutex has. This should help with issues 75 and 117.

* Merge 122 from ithaka that addresses Issue #98 - JsonInstanceSerializer does not deserialize
custom payload types. IMPORTANT! This change introduces a breaking incompatibility with List payloads
that will show up in environments that mix the old code and the new code. The new code will throw a
JsonMappingException when it attempts to read a List payload written by the old code. The old code,
when it reads a List payload generated by the new code, will generate a list with two elements,
the first of which is the class name of the List type, and the second of which is the original list.

* Issue 121: Apply bytecode rewriting to turn off JMX registrations to TestingServer as well as
TestingCluster.

* Issue 125: Use ScheduledThreadPoolExecutor instead of blocking threads that have period work.

* Issue 126: Added getNamespace() method.

* Issue 120: Additional check for connection loss in DistributedDoubleBarrier.

1.1.15/1.0.16 - July 14, 2012
=============================
* Added ChildReaper. This builds on the newly added Reaper. This utility monitors a single node
and reaps empty children of that node.

* Issue 107: The namespace wrapper was corrupting the path if the EnsurePath handler had an error.
The best thing to do is let the code continue.
