@@ -2,6 +2,9 @@
 ==============================
 * Issue 132: If namespace is set in builder, getNamespace() does not return it
 
+* Issue 131: If connection is lost to the server, the ServiceInstance needs to re-register once
+there is a re-connection.
+
 1.1.16/1.0.17 - August 2, 2012
 ==============================
 * Merge 114 from amuraru: Make sure internal executor services are not started until startup.
